fix news-block fix vertical align in header_bottom

--- a/css/styles.css
+++ b/css/styles.css
@@ -20,10 +20,14 @@ body{
 	font-size: 16px;
 	/*text-align:center;*/
 }
+.row{
+	margin:0 -10px;
+}
 .wraper{
 	max-width: 990px;
 	margin: 0 auto;
 	text-align: center;
+	padding: 0 10px;
 }
 .margin-b-10{
 	margin-bottom: 10px;
@@ -58,6 +62,7 @@ body{
 	color: #0f680e;
 	font-size: 16px;
 	text-align: initial;
+
 }
 .contact-info_item_value{
 	display: inline-block;
@@ -80,15 +85,17 @@ body{
     text-decoration: none;
 	font-style: italic;
 }
-
-
 .btn_block{
+	display: block;
+}
+
+.btn{
 	text-decoration: none;
 	line-height: 16px;
 	color: #fff;
 	font-size: 16px;
 	padding: 10px 0;
-	display: block;
+	
 	height: 37px;
 	border-radius: 3px;
 	border-top: 1px solid #f3ec19;
@@ -287,9 +294,9 @@ a.icon-menu {
 
 .news-block{
 	display: block;
-	width: 232px;
+	width: 254px;
     margin: 10px auto;
-    padding: 0 8px;
+    padding: 0 11px;
 }
 
 .news-block_text{
@@ -368,6 +375,9 @@ a.icon-menu {
 	margin: 0 10px;
 }*/
 @media(min-width: 990px){
+	.wraper{
+		padding: 0;
+	}
 	.pull-right-tablet{
 		float: right;
 	}
@@ -375,7 +385,7 @@ a.icon-menu {
 		line-height: 28px;
 		left: 0;
 	}
-	.btn{
+	.buttons-holder{
 		width: 136px;
 	}
 	.menu__opener{
@@ -385,9 +395,12 @@ a.icon-menu {
 	.sidebar_menu{
 		position: static;
 	}
+	.sidebar_menu.active{
+		overflow: hidden;
+	}
 	.display-inl-block{
 		display: inline-block;
-
+		vertical-align: middle;
 	}
 	.navigation-menu{
 		background: #51c066; /* Old browsers */
@@ -403,7 +416,7 @@ a.icon-menu {
 	.t-align-left{
 		text-align: left;
 	}
-	.logo-left,.contact-info,.btn{
+	.logo-left,.contact-info,.buttons-holder{
 		padding-right: 10px;
 	}
 	.header > .heder__top > .wraper{
@@ -423,5 +436,14 @@ a.icon-menu {
 	.col-tablet-1-3{
 		float: left;
 		width: 33.33%;
+	}
+	.news-block:nth-child(1){
+
+	}
+	.news-block:nth-child(2){
+		
+	}
+	.news-block:nth-child(3){
+		float: right;
 	}
 	
